feat(Kafka): Enable mocking and contract testing  (#9)
* feat(async): add Microcks Async Minion resource and refactor to add health checks

Signed-off-by: SebastienDegodez <sebastien.degodez@gmail.com>

* feat(kafka): integrate Kafka support with Async Minion

Signed-off-by: SebastienDegodez <sebastien.degodez@gmail.com>

---------

Signed-off-by: SebastienDegodez <sebastien.degodez@gmail.com>

--- a/tests/Aspire.Hosting.Microcks.Tests/Aspire.Hosting.Microcks.Tests.csproj
+++ b/tests/Aspire.Hosting.Microcks.Tests/Aspire.Hosting.Microcks.Tests.csproj
@@ -18,6 +18,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageReference Include="Aspire.Hosting.Testing" Version="9.5.2" />
+    <PackageReference Include="Aspire.Hosting.Kafka" Version="9.5.2" />
+    <PackageReference Include="Aspire.Confluent.Kafka" Version="9.5.2" />
   </ItemGroup>
   <ItemGroup>
       <None Include="resources\**" CopyToOutputDirectory="PreserveNewest" />
