test: improve test suite stability and observability (#47)
* fix(tests): ensure producer flushes after sending Kafka messages

Signed-off-by: SebastienDegodez <sebastien.degodez@gmail.com>

* feat(tests): add method to create required Kafka topics for tests

Signed-off-by: SebastienDegodez <sebastien.degodez@gmail.com>

* fix(tests): update xUnit package references and add console runner

Signed-off-by: SebastienDegodez <sebastien.degodez@gmail.com>

* feat(tests): add Xunit assembly configuration for test setup

Signed-off-by: SebastienDegodez <sebastien.degodez@gmail.com>

* fix(tests): enhance logging setup and improve Kafka test output

Signed-off-by: SebastienDegodez <sebastien.degodez@gmail.com>

* fix(tests): improve test logging verbosity and filter Polly logs

Signed-off-by: SebastienDegodez <sebastien.degodez@gmail.com>

* fix(tests): replace test output helper with logger for better logging

Signed-off-by: SebastienDegodez <sebastien.degodez@gmail.com>

* fix(tests): enhance logging during Kafka message testing

Signed-off-by: SebastienDegodez <sebastien.degodez@gmail.com>

* fix(tests): reduce timeout values for Kafka message tests

Signed-off-by: SebastienDegodez <sebastien.degodez@gmail.com>

* refactor(tests): remove test collections to run containers individually and capture logs

Removed xUnit collection classes to ensure each test fixture runs in isolation,
allowing better log capture and debugging capabilities per container instance.

Signed-off-by: SebastienDegodez <sebastien.degodez@gmail.com>

---------

Signed-off-by: SebastienDegodez <sebastien.degodez@gmail.com>

--- a/.github/workflows/steps.dotnet-build-test.yml
+++ b/.github/workflows/steps.dotnet-build-test.yml
@@ -82,6 +82,7 @@ jobs:
       run: |
         dotnet test -f net10.0 --no-build `
         --configuration Release `
+        --logger "console;verbosity=detailed" `
         --logger trx `
         --collect:"XPlat Code Coverage" `
         --results-directory testresults
@@ -92,7 +93,7 @@ jobs:
       if: ${{ inputs.use-sonarcloud == true }}
       run: |
         dotnet tool install --global dotnet-coverage
-        dotnet-coverage collect --output-format xml --output "coverage.xml" "dotnet test -f net10.0 --no-build --configuration Release --logger trx --results-directory testresults"
+        dotnet-coverage collect --output-format xml --output "coverage.xml" "dotnet test --no-build -f net10.0 --configuration Release --logger console;verbosity=detailed --logger trx --results-directory testresults"
       shell: pwsh
 
     - name: Stop SonarQube Analysis
