chore(ci): refine SonarCloud analysis conditions and ignore dependabot (#48)
Signed-off-by: SebastienDegodez <sebastien.degodez@gmail.com>

--- a/.github/workflows/steps.dotnet-build-test.yml
+++ b/.github/workflows/steps.dotnet-build-test.yml
@@ -55,10 +55,13 @@ jobs:
       run: dotnet restore
 
     - name: 🔍 Start SonarQube Analysis
-      # Only run SonarCloud analysis only for the original repository and not for forks (either on push or PR from the same repo)
+      # Only run SonarCloud analysis for the original repository, not for forks or dependabot
+      # Exclude depenbabot as it cannot access secrets
+      # Exclude push from forks as they cannot access secrets
       if: ${{ inputs.use-sonarcloud == true &&
-          ( github.repository == 'microcks/microcks-aspire') &&
-          ( github.event_name != 'pull_request' || ( github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]') ) }}
+          github.actor != 'dependabot[bot]' && 
+          github.repository == 'microcks/microcks-aspire' &&
+          ( github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository ) }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -97,11 +100,12 @@ jobs:
       shell: pwsh
 
     - name: Stop SonarQube Analysis
-      # Only run SonarCloud analysis only for the original repository and not for forks (either on push or PR from the same repo)
+      # Only run SonarCloud analysis for the original repository, not for forks or dependabot
       if: ${{ inputs.use-sonarcloud == true &&
           ( success() || steps.test-with-coverage.conclusion == 'failure' ) &&
-          ( github.repository == 'microcks/microcks-aspire' ) &&
-          ( github.event_name != 'pull_request' || ( github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]' ) ) }}
+          github.actor != 'dependabot[bot]' &&
+          github.repository == 'microcks/microcks-aspire' &&
+          ( github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository ) }}
       id: sonar
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
