chore: #31 Add SBOM for .net 10.0
Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>

--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -12,6 +12,7 @@ files:
   active: ALWAYS
   artifacts:
     - path: './Microcks.Aspire-net9.0.spdx-sbom.json'
+    - path: './Microcks.Aspire-net10.0.spdx-sbom.json'
 
 release:
   github:
